--- a/debug/verif2.ipynb
+++ b/debug/verif2.ipynb
@@ -52,29 +52,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   0  1  2  3   4\n",
-      "0  1  2  3  4  10\n",
-      "1  5  6  7  8  14\n"
+      "   0  1  2   3   4   5\n",
+      "0  1  8  9  10  11  12\n",
+      "1  2  6  7  13  14  15\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[ 1,  2,  3,  4, 10],\n",
-       "       [ 5,  6,  7,  8, 14],\n",
-       "       [ 9, 11, 12, 13, 15],\n",
-       "       [16, 17, 18, 19, 20],\n",
-       "       [ 1,  2,  5,  9, 20],\n",
-       "       [ 3,  4,  6, 11, 17],\n",
-       "       [ 7,  8, 10, 12, 16],\n",
-       "       [13, 14, 15, 18, 19],\n",
-       "       [ 1,  2,  6, 12, 18],\n",
-       "       [ 3,  4,  5, 13, 16],\n",
-       "       [ 7,  9, 10, 11, 19],\n",
-       "       [ 8, 14, 15, 17, 20],\n",
-       "       [ 1,  2,  7, 13, 17],\n",
-       "       [ 3,  5,  8, 11, 18],\n",
-       "       [ 4,  6,  9, 14, 16]])"
+       "array([[ 8,  9, 10, 11, 12],\n",
+       "       [ 6,  7, 13, 14, 15],\n",
+       "       [ 3,  4, 16, 17, 18],\n",
+       "       [ 1,  2,  5, 19, 20],\n",
+       "       [ 2,  8, 13, 14, 16],\n",
+       "       [ 4,  5,  9, 15, 19],\n",
+       "       [ 3,  6,  7, 12, 20],\n",
+       "       [ 1, 10, 11, 13, 17],\n",
+       "       [ 5,  6, 10, 14, 18],\n",
+       "       [ 1,  7,  8, 15, 18],\n",
+       "       [ 2,  7, 11, 17, 19],\n",
+       "       [ 4,  9, 11, 14, 20],\n",
+       "       [ 1,  3, 12, 16, 19],\n",
+       "       [ 2,  3, 10, 12, 15],\n",
+       "       [ 5,  6,  8,  9, 17],\n",
+       "       [ 4,  5, 12, 13, 18],\n",
+       "       [ 7,  9, 10, 16, 20],\n",
+       "       [ 3,  6,  8, 13, 19],\n",
+       "       [ 6, 11, 15, 16, 20],\n",
+       "       [ 1,  8, 12, 14, 17],\n",
+       "       [ 2,  9, 13, 18, 20],\n",
+       "       [ 1,  3,  5, 11, 20],\n",
+       "       [ 2,  4, 10, 14, 17],\n",
+       "       [ 1,  2,  9, 18, 19],\n",
+       "       [ 4,  5,  7,  8, 15],\n",
+       "       [ 1,  2,  5,  7, 11]])"
       ]
      },
      "execution_count": 2,
@@ -83,44 +94,11 @@
     }
    ],
    "source": [
-    "df=pd.read_csv('20_3_95.txt', sep=',',header=None)\n",
+    "df=pd.read_csv('20_4_sigma2.txt', sep=',',header=None)\n",
     "print(df.head(2))\n",
     "arr2 = df.to_numpy()\n",
-    "arr2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "b4e480f9-ecac-4c87-99ff-560c18dd62d1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1,  2,  3,  4, 10],\n",
-       "       [ 5,  6,  7,  8, 14],\n",
-       "       [ 9, 11, 12, 13, 15],\n",
-       "       [16, 17, 18, 19, 20],\n",
-       "       [ 1,  2,  5,  9, 20],\n",
-       "       [ 3,  4,  6, 11, 17],\n",
-       "       [ 7,  8, 10, 12, 16],\n",
-       "       [13, 14, 15, 18, 19],\n",
-       "       [ 1,  2,  6, 12, 18],\n",
-       "       [ 3,  4,  5, 13, 16],\n",
-       "       [ 7,  9, 10, 11, 19],\n",
-       "       [ 8, 14, 15, 17, 20],\n",
-       "       [ 1,  2,  7, 13, 17],\n",
-       "       [ 3,  5,  8, 11, 18],\n",
-       "       [ 4,  6,  9, 14, 16]])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "#remove idx column\n",
+    "arr2 = arr2[:,1:6]\n",
     "arr2"
    ]
   },
@@ -134,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c0673ab5-1773-4900-8d7c-15af8f8dc521",
    "metadata": {},
    "outputs": [],
@@ -172,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a21e4e84-9be4-4b3e-b31d-26764fbce034",
    "metadata": {},
    "outputs": [],
@@ -184,17 +162,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "4896dd93-fd44-4999-8437-dcf5f906b56e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(15, 1942)"
+       "(26, 1942)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,23 +183,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e29b0a36-5e3d-4b13-bf3c-87eb50ce3b5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 1, ..., 1, 1, 1],\n",
-       "       [1, 1, 0, ..., 0, 0, 2],\n",
-       "       [1, 1, 1, ..., 1, 1, 2],\n",
+       "array([[0, 1, 2, ..., 1, 0, 3],\n",
+       "       [1, 0, 0, ..., 0, 1, 1],\n",
+       "       [0, 0, 0, ..., 1, 2, 1],\n",
        "       ...,\n",
-       "       [1, 0, 0, ..., 0, 2, 1],\n",
-       "       [1, 2, 1, ..., 1, 1, 1],\n",
-       "       [0, 0, 0, ..., 1, 0, 2]], dtype=int8)"
+       "       [0, 0, 0, ..., 0, 0, 1],\n",
+       "       [1, 1, 0, ..., 1, 0, 3],\n",
+       "       [1, 2, 1, ..., 1, 0, 1]], dtype=int8)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f0ae3608-8d86-4f8b-93ba-79ce8571248b",
    "metadata": {},
    "outputs": [
@@ -252,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "93eaf330-c691-4369-9f56-946646d95a11",
    "metadata": {},
    "outputs": [],
@@ -262,20 +240,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "caa8e61c-c734-4cba-8223-58c8c1c2eafe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([ 0,  0,  1,  1,  2,  3,  4,  4,  5,  7,  9,  9,  9,  9, 10, 10, 10,\n",
-       "        11, 11, 13, 14]),\n",
-       " array([ 357, 1261,  349, 1661, 1667, 1211,  271,  272, 1474, 1288,  961,\n",
-       "         985, 1306, 1607,  238,  360,  587,  186, 1634, 1831,  302]))"
+       "(array([ 0,  0,  1,  1,  3,  4,  4,  5,  5,  6,  6,  6,  7,  7,  7,  9, 11,\n",
+       "        11, 11, 11, 12, 12, 14, 14, 15, 15, 15, 18, 19, 19, 19, 19, 20, 20,\n",
+       "        20, 21, 21, 22, 23, 23, 24, 25]),\n",
+       " array([ 980, 1549,  416,  826,  272, 1212, 1870,  708, 1256,  335,  733,\n",
+       "        1501,  418,  906, 1432,  639, 1196, 1346, 1584, 1936, 1166, 1332,\n",
+       "        1661, 1824,  702,  836, 1863, 1159,  329,  501,  549, 1588,   85,\n",
+       "         771, 1216,  191,  262, 1588, 1216, 1233, 1250,  685]))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,17 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "0cc665a4-06b3-4e0b-8886-f71600a30537",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,17 +288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "ecfddefa-2055-4b0a-a48f-4c699c130237",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "64597bfc-0d5a-45e7-b828-8d9ea9a920ed",
    "metadata": {},
    "outputs": [],
@@ -338,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "38e7f13f-d900-4b07-a51e-409ebdcd1000",
    "metadata": {},
    "outputs": [
@@ -348,7 +329,7 @@
        "array([0, 4], dtype=int8)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,17 +340,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "5e7d5cd2-e4c1-4a12-aa65-6997bff6c0fc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([29109,    21])"
+       "array([50450,    42])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "7033d722-99c4-427e-a64d-a4b5476eafd9",
    "metadata": {},
    "outputs": [],
@@ -398,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "561ccc99-87cf-49fd-b84d-2ed90e3187b1",
    "metadata": {},
    "outputs": [
@@ -414,7 +395,7 @@
        "       [1, 0, 0, ..., 1, 0, 6]], dtype=int8)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "d7d36e6d-91f3-44d7-b97c-f1a26d782395",
    "metadata": {},
    "outputs": [],
@@ -435,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "44186158-60c5-47db-83d9-8289de56c217",
    "metadata": {},
    "outputs": [
@@ -445,7 +426,7 @@
        "(1942, 1942)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "86523360-d343-4716-b5d5-82d955659e1c",
    "metadata": {},
    "outputs": [
@@ -476,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "b21535dc-7acb-434f-a0ea-884e6f904db6",
    "metadata": {},
    "outputs": [],
@@ -486,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "id": "3114216d-e896-459c-ac63-e08b45ab200a",
    "metadata": {},
    "outputs": [],
@@ -496,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "id": "00ecaa77-24e5-485e-bfa1-52ad35a9139f",
    "metadata": {},
    "outputs": [],
@@ -506,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "id": "8bd2c2eb-674d-4825-849d-0ad4d22e273d",
    "metadata": {},
    "outputs": [
@@ -516,7 +497,7 @@
        "198"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "id": "9a878889-b571-4da0-a887-ff1e165f1b6f",
    "metadata": {},
    "outputs": [
@@ -537,7 +518,7 @@
        "8314"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
