--- a/debug/verif2.ipynb
+++ b/debug/verif2.ipynb
@@ -2,25 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "0b27b721-3b17-4623-8784-7b8879baf038",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 5, 13, 26, 38, 37, 25],\n",
-       "       [20, 32, 38, 21,  5, 11],\n",
-       "       [32, 27, 38, 11, 10, 29],\n",
-       "       ...,\n",
-       "       [11, 35, 25,  4, 27, 24],\n",
-       "       [ 3, 33, 25, 13, 17, 20],\n",
-       "       [ 8, 37, 12,  9,  7,  4]])"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5 13 26 38 37 25]\n",
+      " [20 32 38 21  5 11]\n",
+      " [32 27 38 11 10 29]\n",
+      " ...\n",
+      " [11 35 25  4 27 24]\n",
+      " [ 3 33 25 13 17 20]\n",
+      " [ 8 37 12  9  7  4]]\n",
+      "(1942, 6)\n"
+     ]
     }
    ],
    "source": [
@@ -39,7 +37,8 @@
     "df = pd.DataFrame(arr)\n",
     "df = df.astype(int)\n",
     "arr = df.to_numpy()\n",
-    "arr"
+    "print(arr)\n",
+    "print(arr.shape)"
    ]
   },
   {
@@ -267,49 +266,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0cc665a4-06b3-4e0b-8886-f71600a30537",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "intersect[1,349]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "ecfddefa-2055-4b0a-a48f-4c699c130237",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "intersect[14,302]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "id": "64597bfc-0d5a-45e7-b828-8d9ea9a920ed",
    "metadata": {},
    "outputs": [],
@@ -319,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "id": "38e7f13f-d900-4b07-a51e-409ebdcd1000",
    "metadata": {},
    "outputs": [
@@ -329,7 +302,7 @@
        "array([0, 4], dtype=int8)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "id": "5e7d5cd2-e4c1-4a12-aa65-6997bff6c0fc",
    "metadata": {},
    "outputs": [
@@ -350,7 +323,7 @@
        "array([50450,    42])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,162 +342,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "7033d722-99c4-427e-a64d-a4b5476eafd9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "intersect2 = m2 @ m2.T"
+    "#intersect2 = m2 @ m2.T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "id": "561ccc99-87cf-49fd-b84d-2ed90e3187b1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[6, 2, 1, ..., 1, 2, 1],\n",
-       "       [2, 6, 3, ..., 1, 1, 0],\n",
-       "       [1, 3, 6, ..., 2, 0, 0],\n",
-       "       ...,\n",
-       "       [1, 1, 2, ..., 6, 1, 1],\n",
-       "       [2, 1, 0, ..., 1, 6, 0],\n",
-       "       [1, 0, 0, ..., 1, 0, 6]], dtype=int8)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "intersect2"
+    "#intersect2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "id": "d7d36e6d-91f3-44d7-b97c-f1a26d782395",
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.fill_diagonal(intersect2, 0)"
+    "#np.fill_diagonal(intersect2, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "id": "44186158-60c5-47db-83d9-8289de56c217",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1942, 1942)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "intersect2.shape"
+    "#intersect2.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "86523360-d343-4716-b5d5-82d955659e1c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "verif-selected intersections:  [0 4 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#change to 0 all values < max_intersect\n",
-    "intersect2 = np.where(intersect2 < 4, 0, intersect2)\n",
-    "print(\"verif-selected intersections: \",np.unique(intersect2)) "
+    "#intersect2 = np.where(intersect2 < 4, 0, intersect2)\n",
+    "#print(\"verif-selected intersections: \",np.unique(intersect2)) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "id": "b21535dc-7acb-434f-a0ea-884e6f904db6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hit = np.where(intersect2 > 0)"
+    "#hit = np.where(intersect2 > 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "id": "3114216d-e896-459c-ac63-e08b45ab200a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hit5 = np.where(intersect2 == 5)"
+    "#hit5 = np.where(intersect2 == 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "id": "00ecaa77-24e5-485e-bfa1-52ad35a9139f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hit4 = np.where(intersect2 == 4)"
+    "#hit4 = np.where(intersect2 == 4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "id": "8bd2c2eb-674d-4825-849d-0ad4d22e273d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "198"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(hit5[0])"
+    "#len(hit5[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "id": "9a878889-b571-4da0-a887-ff1e165f1b6f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8314"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(hit4[0])"
+    "#len(hit4[0])"
    ]
   },
   {
