--- a/debug/intersect.ipynb
+++ b/debug/intersect.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 20,
    "id": "6f9f670f-c083-4013-bf4f-564edfaf256f",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,14 @@
      "output_type": "stream",
      "text": [
       "memory m5 ready: (252, 10)\n",
-      "recover state (indexes): [0, 46, 86, 179, 222, 235]\n",
+      "0.010408163070678711 seconds\n",
+      "recover state (indexes): [0, 235, 371, 435, 454, 620, 673, 716, 915, 954, 1009, 1078, 1142, 1194, 1208, 1995, 2032, 2089, 2156, 2272, 2323, 2368, 2513, 2561, 2581, 2831, 3254, 3351, 3452, 3469, 3516, 3533, 3619, 4204, 4336, 4354, 4597, 4910, 5500, 5511, 5527, 5550, 5759, 5831, 5989, 6084, 6142]\n",
+      "1 0\n",
+      "2 46\n",
+      "3 86\n",
+      "4 179\n",
+      "5 222\n",
+      "6 235\n",
       "END\n",
       "[1, 1, 1, 1, 1, 0, 0, 0, 0, 0]\n",
       "[1, 1, 0, 0, 0, 1, 1, 1, 0, 0]\n",
@@ -19,7 +26,11 @@
       "[0, 1, 0, 1, 0, 0, 1, 0, 1, 1]\n",
       "[0, 0, 1, 0, 1, 0, 1, 1, 1, 0]\n",
       "[0, 0, 0, 1, 1, 1, 0, 1, 0, 1]\n",
-      "Sums: [3 3 3 3 3 3 3 3 3 3]\n"
+      "Sums: [3 3 3 3 3 3 3 3 3 3]\n",
+      "recover state (indexes): [0, 235, 371, 435, 454, 620, 673, 716, 915, 954, 1009, 1078, 1142, 1194, 1208, 1995, 2032, 2089, 2156, 2272, 2323, 2368, 2513, 2561, 2581, 2831, 3254, 3351, 3452, 3469, 3516, 3533, 3619, 4204, 4336, 4354, 4597, 4910, 5500, 5511, 5527, 5550, 5759, 5831, 5989, 6084, 6142, 0, 46, 86, 179, 222, 235]\n",
+      "memory m6 ready: (210, 10)\n",
+      "0.005614042282104492 seconds\n",
+      "Cover - total 205 97.61904761904762 %\n"
      ]
     }
    ],
@@ -51,6 +62,7 @@
     "import gc\n",
     "import time\n",
     "import pickle\n",
+    "import time\n",
     "\n",
     "#def delete_row_lil(mat, i):\n",
     "#    if not isinstance(mat, scipy.sparse.lil_matrix):\n",
@@ -62,8 +74,11 @@
     "class Reducere():\n",
     "    def __init__(self, arr):\n",
     "        self.n = len(arr)\n",
+    "        start = time.time()\n",
     "        self.m5, self.c5 = self.matrix5(arr)\n",
+    "        end = time.time()\n",
     "        print(\"memory m5 ready:\",self.m5.shape)\n",
+    "        print(end - start,\"seconds\")\n",
     "        dim = self.m5.shape[0]\n",
     "        #binar list #################################\n",
     "        self.solutions = []\n",
@@ -104,6 +119,36 @@
     "            i += 1\n",
     "\n",
     "        return z, comb   \n",
+    "\n",
+    "    \n",
+    "    def matrix6(self,arr):\n",
+    "        comb = self.comb(arr,6)\n",
+    "        cols = self.n\n",
+    "        rows = math.comb(cols,6)\n",
+    "\n",
+    "        #z = np.zeros((rows,cols), dtype = np.int8)\n",
+    "        z = lil_matrix((rows, cols), dtype=np.int8)\n",
+    "        i = 0\n",
+    "        for c in comb:\n",
+    "            \n",
+    "            n1 = c[0]\n",
+    "            n2 = c[1]\n",
+    "            n3 = c[2]\n",
+    "            n4 = c[3]\n",
+    "            n5 = c[4]\n",
+    "            n6 = c[5]\n",
+    "\n",
+    "            z[i,n1-1] = 1\n",
+    "            z[i,n2-1] = 1\n",
+    "            z[i,n3-1] = 1\n",
+    "            z[i,n4-1] = 1\n",
+    "            z[i,n5-1] = 1\n",
+    "            z[i,n6-1] = 1\n",
+    "                \n",
+    "            #print(i,z[i])\n",
+    "            i += 1\n",
+    "\n",
+    "        return z, comb       \n",
     "    \n",
     "    def process_intersect(self):\n",
     "        dim = self.m5.shape[0]    \n",
@@ -175,7 +220,34 @@
     "        print(\"Sums:\",s.sum(axis=0))\n",
     "\n",
     "    def cover(self):\n",
-    "        pass\n",
+    "        self.save_state()\n",
+    "        start = time.time()\n",
+    "        self.m6, self.c6 = self.matrix6(arr)\n",
+    "        end = time.time()\n",
+    "        print(\"memory m6 ready:\",self.m6.shape)\n",
+    "        print(end - start,\"seconds\")\n",
+    "        \n",
+    "        c6_hit_indexes = []\n",
+    "        s5 = np.array(self.solutions)\n",
+    "        for s in s5:\n",
+    "            index = 0\n",
+    "            for c6 in self.m6:\n",
+    "                c6 = c6.toarray()[0]\n",
+    "                #print(\"5:\",s)\n",
+    "                #print(\"6:\",c6.toarray()[0])\n",
+    "                intersections = s@c6\n",
+    "                \n",
+    "                if(intersections >= 4):\n",
+    "                    #print(intersections)\n",
+    "                    c6_hit_indexes.append(index)\n",
+    "                index += 1    \n",
+    "                \n",
+    "        #print(c6_hit_indexes)\n",
+    "        hit_c6 = np.array(c6_hit_indexes)\n",
+    "        hit_c6 = np.unique(hit_c6)        \n",
+    "        hit_c6 = hit_c6.shape[0]\n",
+    "        all_c6 = self.m6.shape[0]\n",
+    "        print(\"Cover - total\", hit_c6, hit_c6*100/all_c6,\"%\")\n",
     "\n",
     "    def interpret(self):\n",
     "        self.save_state()\n",
@@ -183,8 +255,7 @@
     "        c5_array = np.array(self.c5)\n",
     "        solution = c5_array[self.solutions2,:]\n",
     "        for c in solution:\n",
-    "            print(f\"{c[0]},{c[1]},{c[2]},{c[3]},{c[4]}\")\n",
-    "        \n",
+    "            print(f\"{c[0]},{c[1]},{c[2]},{c[3]},{c[4]}\")        \n",
     "    \n",
     "    def go(self):\n",
     "        self.save_state()\n",
@@ -197,7 +268,8 @@
     "arr = np.arange(start=1, stop=m+1, step=1)\n",
     "calc = Reducere(arr) \n",
     "calc.go()\n",
-    "#calc.interpret()"
+    "#calc.interpret()\n",
+    "calc.cover()"
    ]
   },
   {
